# ADP-study

./: .gitignore  35_pck_list.txt  README.md  key-requirements.txt  pyproject.toml  requirement.txt  requirements.txt
1. 데이터 이해/: 빅데이터 관련 용어 정리.md
1. 데이터 이해/1. 데이터의 이해/: 1. 데이터와 정보.md  2. 데이터베이스의 정의와 특징.md  3. 데이터베이스 활용.md  데이터베이스 종류.md
1. 데이터 이해/2. 데이터의 가치와 미래/: 1. 빅데이터의 이해.md  2. 빅데이터의 가치와 영향.md  3. 비즈니스 모델.md  4. 위기 요인과 통제 방안.md  5. 미래의 빅데이터.md
1. 데이터 이해/3. 가치 창조를 위한 데이터 사이언스와 전략 인사이트/: 1. 빅데이터분석과 전략 인사이트.md  2. 전략 인사이트 도출을 위한 필요 역량.md  3. 빅데이터 그리고 데이터 사이언스의 미래.md
2. 데이터 처리 기술 이해/1. 데이터 처리 프로세스/: 1. ETL.md  2. CDC.md  3. EAI.md  4. 데이터 연계 및 통합 기법 요약.md  5. 대용량 비정형 데이터 처리.md  하둡(Hadoop).md
2. 데이터 처리 기술 이해/2. 데이터 처리 기술/: 1-0. 분산 데이터 저장 기술.md  1-1. 분산 파일 시스템.md  1-2. 데이터베이스 클러스터.md  1-3. NoSQL.md  2. 분산 컴퓨팅 기술.md  3. 클라우드 인프라 기술.md
3. 데이터분석 기획/1. 데이터분석 기획의 이해/: 1. 분석 기획 방향성 도출.md  2-0. 분석 방법론 개요.md  2-1. 전통적 분석 방법론 (KDD & CRISP-DM).md  2-2. 빅데이터 분석 방법론.md  3. 분석 과제 발굴.md  4. 분석 프로젝트 관리 방안.md
3. 데이터분석 기획/2. 분석 마스터 플랜/: 1. 마스터 플랜 수립.md  2. 분석 거버넌스 체계 수립.md  능력 성숙도 통합 모델.md
PracticeTest/: ADP-topics(old).md  ADP-topics.md  README.md  [제35회ADP실기]기본제공_python_package_list.txt  add_page_number.py  append_guide.py  memo.ipynb  practice.ipynb  prompt.txt  topics-by_Gemini.md  topics.md
PracticeTest/OpenBook/: Jupyter Notebook 사용법.md  temp.md
PracticeTest/OpenBook-Gemini/: temp.md
PracticeTest/OpenBook-Gemini/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.2. 데이터 정제 및 피처 엔지니어링/: 결측치 확인.md  범주형 변수 인코딩.md  변수 변환.md  차원 축소.md  클래스 불균형 처리.md  파생 변수 생성.md
PracticeTest/OpenBook-Gemini/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.3. 데이터 시각화/: 주요 차트.md
PracticeTest/OpenBook-Gemini/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.4. 탐색적 데이터 분석 (EDA)/: 단변량 분석.md  이변량다변량 분석.md
PracticeTest/OpenBook-Gemini/2. 통계 분석 (Statistical Analysis)/2.1. 기술 통계 및 확률/: 기술 통계.md  평균 변화율.md
PracticeTest/OpenBook-Gemini/2. 통계 분석 (Statistical Analysis)/2.2. 추론 통계 (가설 검정)/: 정규성 검정.md
PracticeTest/OpenBook-Gemini/2. 통계 분석 (Statistical Analysis)/2.3. 상관 및 회귀 분석/: 강건 회귀.md  로지스틱 회귀.md  베이지안 회귀.md  상관 분석.md  선형 회귀.md  편상관 분석.md
PracticeTest/OpenBook-Gemini/3. 지도 학습 (Supervised Learning)/3.1. 모델링 준비/: 데이터 분할.md
PracticeTest/OpenBook-Gemini/3. 지도 학습 (Supervised Learning)/3.2. 회귀 모델/: 부스팅 회귀 모델.md  선형 회귀.md  트리 기반 회귀.md
PracticeTest/OpenBook-Gemini/3. 지도 학습 (Supervised Learning)/3.3. 분류 모델/: 로지스틱 회귀.md  부스팅 분류 모델.md  서포트 벡터 머신 분류(SVC).md
PracticeTest/OpenBook-Gemini/3. 지도 학습 (Supervised Learning)/3.4. 앙상블 모델/: 배깅.md  보팅.md  부스팅.md
PracticeTest/OpenBook-Gemini/4. 비지도 학습 (Unsupervised Learning)/: 군집 분석.md  연관 규칙 분석.md
PracticeTest/OpenBook-Gemini/5. 시계열 분석 (Time Series Analysis)/: ARIMA 모델.md
PracticeTest/OpenBook-Gemini/6. 텍스트 마이닝 (Text Mining)/: 딥러닝 텍스트 모델.md  텍스트 벡터화.md  텍스트 분석 기법.md
PracticeTest/OpenBook-Gemini/7. 모델 평가 및 최적화/7.1. 모델 평가지표/: 회귀 모델 평가지표.md
PracticeTest/OpenBook-Gemini/7. 모델 평가 및 최적화/7.2. 모델 최적화/: 변수 중요도.md  하이퍼파라미터 튜닝.md
PracticeTest/OpenBook-Gemini/8. 고급 주제/: 생존 분석.md  이미지 분석.md
PracticeTest/OpenBook-Jupyter/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.1. 데이터 핸들링/: Python 기초.ipynb  데이터 결합.ipynb  데이터 입출력.ipynb  데이터 조작.ipynb
PracticeTest/OpenBook-Jupyter/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.2. 데이터 정제 및 피처 엔지니어링/: 결측치 처리.ipynb
PracticeTest/OpenBook-PDF/: Jupyter Notebook 사용법.md  merge_pdf.py
PracticeTest/OpenBook-PDF/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.1. 데이터 핸들링/: Python 기초.md  데이터 결합.md  데이터 구조 확인.md  데이터 조작.md  핵심 라이브러리.md
PracticeTest/OpenBook-PDF/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.2. 데이터 정제 및 피처 엔지니어링/: 결측치 확인.md
PracticeTest/OpenBook/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.1. 데이터 핸들링/: 3. 데이터 구조 확인.md  4. 데이터 조작.md  5. 데이터 결합.md  Python 기초.md  데이터 결합.md  데이터 구조 확인.md  데이터 입출력.md  데이터 조작.md  핵심 라이브러리.md
PracticeTest/OpenBook/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.2. 데이터 정제 및 피처 엔지니어링/: 2. 결측치 처리.md  3. 이상치 탐지 및 처리.md  6. 범주형 변수 인코딩.md  8. 차원 축소.md  9. 클래스 불균형 처리.md  결측치 처리.md  범주형 변수 인코딩.md  변수 변환.md  스케일링.md  이상치 탐지 및 처리.md  차원 축소.md  클래스 불균형 처리.md  파생 변수 생성.md
PracticeTest/OpenBook/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.3. 데이터 시각화/: 1. 주요 차트.md  2. 차트 옵션.md  라이브러리.md  주요 차트.md  차트 옵션.md
PracticeTest/OpenBook/1. 데이터 전처리 및 탐색 (Data Preprocessing & EDA)/1.4. 탐색적 데이터 분석 (EDA)/: 1. 단변량 분석.md  이변량다변량 분석.md
PracticeTest/OpenBook/2. 통계 분석 (Statistical Analysis)/2.1. 기술 통계 및 확률/: 1. 확률.md  2. 확률 분포.md  3. 기술 통계.md  4. 평균 변화율.md  5. 표본 크기 산출.md  기술 통계.md  표본 크기 산출.md  확률 분포.md  확률.md
PracticeTest/OpenBook/2. 통계 분석 (Statistical Analysis)/2.2. 추론 통계 (가설 검정)/: 1.2. 정규성 검정.md  기본 개념.md  등분산성 검정.md
PracticeTest/OpenBook/2. 통계 분석 (Statistical Analysis)/2.3. 상관 및 회귀 분석/: 다항 회귀.md  분위수 회귀.md  일반화 선형 모델 (GLM).md  회귀 진단.md
PracticeTest/OpenBook/2. 통계 분석 (Statistical Analysis)/2.3. 상관회귀 분석/: 로지스틱 회귀.md  회귀 진단.md
PracticeTest/OpenBook/3. 지도 학습 (Supervised Learning)/3.1. 모델링 준비/: 1. 데이터 분할.md  2. 교차 검증.md  (+1 more)
PracticeTest/OpenBook/4. 비지도 학습 (Unsupervised Learning)/: 2. 연관 규칙 분석.md  군집 분석.md  연관 규칙 분석.md  이상 탐지.md
PracticeTest/OpenBook/5. 시계열 분석 (Time Series Analysis)/: 2. 정상성 검정.md  3. 시계열 데이터 처리.md  6. 고급 시계열 모델.md  ARIMA 모델.md  고급 시계열 모델.md  시계열 기본 개념.md  시계열 분해 및 파악.md  정상성 검정.md  평활법.md
PracticeTest/OpenBook/6. 텍스트 마이닝 (Text Mining)/: 1. 텍스트 전처리.md  2. 텍스트 벡터화.md  3. 텍스트 분석 기법.md  5. Keras를 활용한 MNIST 분류 모델.md  딥러닝 텍스트 모델.md  텍스트 벡터화.md  텍스트 전처리.md
PracticeTest/OpenBook/8. 고급 주제/: 1. 생존 분석.md  2. 최적화.md  3. 딥러닝 주요개념 및 예제.md  4. 딥러닝 모델 종류.md  딥러닝 모델 종류.md  딥러닝.md  이미지 분석-미완.md  최적화.md
PracticeTest/RData/: export_R_data.R  nottem.csv
PracticeTest/dataset/: export_R_data.R
PracticeTest/sample-test/: bike-sharing-demand.ipynb  bike-sharing-demand.md  sample.md  titanic.ipynb
PracticeTest/시험문제 복원/: prompt.txt  제22회.md  제23회.md  제24회-by_Gemini.md  제24회.md  제25회-by_Gemini.md  제25회.md  제26회-by_Gemini.md  제26회.md  제27회-by_Gemini.md  제27회.md  제28회-by_Gemini.md  제28회.md  제29회-by_Gemini.md  제29회.md  제30회-by_Gemini.md  제30회.md  제31회-by_Gemini.md  제31회.md  제33회-by_Gemini.md  제33회.md
데이터의 이해/: 1. 데이터와 정보.md  SQL.md
(+62 files in other folders)
