[project]
name = "adp-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7, <3.8"
dependencies = [
    "absl-py==0.7.1",
    "alabaster==0.7.12",
    "argon2-cffi==20.1.0",
    "asn1crypto==0.24.0",
    "astor==0.8.1",
    "astroid==2.2.5",
    "astropy==3.1.2",
    "astunparse==1.6.3",
    "async-generator==1.10",
    "atomicwrites==1.3.0",
    "attrs==19.1.0",
    "autograd==1.5",
    "autograd-gamma==0.5.0",
    "automat==0.7.0",
    "babel==2.6.0",
    "backcall==0.1.0",
    "backports-os==0.1.1",
    "backports-shutil-get-terminal-size==1.0.0",
    "bayesian-optimization==1.0.1",
    "beautifulsoup4==4.7.1",
    "bitarray==0.8.3",
    "bkcharts==0.2",
    "bleach==3.1.0",
    "blis==0.2.4",
    "bokeh==1.0.4",
    "boto==2.49.0",
    "boto3==1.9.130",
    "botocore==1.12.130",
    "bz2file==0.98",
    "cached-property==1.5.2",
    "cachetools==4.1.1",
    "catboost==0.14.0",
    "category-encoders==2.0.0",
    "certifi==2019.3.9",
    "cffi==1.12.2",
    "chardet==3.0.4",
    "click==7.0",
    "cloudpickle==0.8.0",
    "colorama==0.4.1",
    "confuse==1.0.0",
    "constantly==15.1.0",
    "contextlib2==0.5.5",
    "convertdate==2.1.3",
    "cryptography==2.6.1",
    "cssselect==1.0.3",
    "cycler==0.10.0",
    "cymem==2.0.2",
    "cython==0.29.6",
    "cytoolz==0.9.0.1",
    "dask==1.1.4",
    "decorator==4.4.0",
    "defusedxml==0.5.0",
    "dist-keras==0.2.1",
    "distributed==1.26.0",
    "django==2.2.4",
    "docutils==0.14",
    "eli5==0.8.2",
    "entrypoints==0.3",
    "enum34==1.1.6",
    "ephem==3.7.7.0",
    "et-xmlfile==1.0.1",
    "factor-analyzer==0.3.2",
    "fastcache==1.0.2",
    "featuretools==0.10.1",
    "filelock==3.0.10",
    "flake8==3.8.4",
    "flask==1.0.2",
    "fsspec==0.4.1",
    "future==0.17.1",
    "gast==0.2.2",
    "gensim==3.7.2",
    "gevent==1.4.0",
    "glob2==0.6",
    "google-auth==1.23.0",
    "google-auth-oauthlib==0.4.2",
    "google-pasta==0.2.0",
    "graphlib-backport==1.0.3",
    "graphviz==0.10.1",
    "greenlet==0.4.15",
    "grpcio==1.19.0",
    "h5py==2.9.0",
    "hanja==0.11.0",
    "heapdict==1.0.0",
    "holidays==0.9.11",
    "html5lib==1.0.1",
    "htmlmin==0.1.12",
    "hyperlink==19.0.0",
    "hyperopt==0.1.2",
    "idna==2.8",
    "imageio==2.5.0",
    "imagesize==1.1.0",
    "imbalanced-learn==0.5.0",
    "imblearn==0.0",
    "importlib-metadata==0.0",
    "incremental==17.5.0",
    "interface-meta==1.3.0",
    "ipython==7.4.0",
    "ipython-genutils==0.2.0",
    "isort==4.3.16",
    "itsdangerous==1.1.0",
    "jamo==0.4.1",
    "jdcal==1.4",
    "jedi==0.13.3",
    "jeepney==0.4",
    "jinja2==2.10",
    "jmespath==0.9.4",
    "joblib==0.13.2",
    "jpype1==0.6.3",
    "jsonschema==2.6.0",
    "jupyter-core==4.4.0",
    "jupyterlab-pygments==0.1.2",
    "keras==2.2.4",
    "keras-applications==1.0.7",
    "keras-preprocessing==1.0.9",
    "keyring==18.0.0",
    "kiwisolver==1.0.1",
    "konlpy==0.5.1",
    "lazy-object-proxy==1.3.1",
    "libarchive-c==2.8",
    "lief==0.10.0",
    "lifelines==0.27.4",
    "lightgbm==2.2.3",
    "littleutils==0.2.2",
    "llvmlite==0.28.0",
    "locket==0.2.0",
    "lunardate==0.2.0",
    "lxml==4.3.2",
    "markdown==3.1",
    "markupsafe==1.1.1",
    "matplotlib==3.0.3",
    "mccabe==0.6.1",
    "missingno==0.4.2",
    "mistune==0.8.4",
    "mlxtend==0.17.0",
    "mock==2.0.0",
    "more-itertools==7.2.0",
    "mpmath==1.1.0",
    "msgpack==0.6.1",
    "multipledispatch==0.6.0",
    "murmurhash==1.0.2",
    "nbconvert==5.4.1",
    "nbformat==4.4.0",
    "nest-asyncio==1.4.2",
    "networkx==2.2",
    "nose==1.3.7",
    "numba==0.43.1",
    "numexpr==2.6.9",
    "numpy==1.21.6",
    "numpydoc==0.8.0",
    "oauthlib==3.1.0",
    "olefile==0.46",
    "openpyxl==2.6.1",
    "opt-einsum==3.3.0",
    "outdated==0.2.0",
    "packaging==21.3",
    "pandas==1.1.2",
    "pandas-flavor==0.2.0",
    "pandocfilters==1.4.2",
    "parsel==1.5.1",
    "parso==0.3.4",
    "partd==0.3.10",
    "pathlib2==2.3.3",
    "patsy==0.5.2",
    "pbr==5.1.3",
    "pep8==1.7.1",
    "pexpect==4.6.0",
    "pickleshare==0.7.5",
    "pillow==5.4.1",
    "pingouin==0.3.5",
    "pip==21.2.4",
    "pkginfo==1.5.0.1",
    "plac==0.9.6",
    "plotly==3.7.1",
    "pluggy==0.9.0",
    "ply==3.11",
    "pmdarima==2.0.1",
    "preshed==2.0.1",
    "prince==0.7.0",
    "prometheus-client==0.6.0",
    "prompt-toolkit==2.0.9",
    "protobuf==3.7.1",
    "psutil==5.6.1",
    "ptyprocess==0.6.0",
    "pulp==2.5.0",
    "py==1.8.0",
    "py4j==0.10.7",
    "pyasn1==0.4.5",
    "pyasn1-modules==0.2.4",
    "pybind11==2.2.4",
    "pycosat==0.6.3",
    "pycparser==2.19",
    "pydispatcher==2.0.5",
    "pydot==1.4.1",
    "pygame==2.0.0",
    "pyhamcrest==1.9.0",
    "pylint==2.3.1",
    "pymongo==3.7.2",
    "pyod==0.9.3",
    "pyodbc==4.0.26",
    "pyopenssl==19.0.0",
    "pyparsing==2.3.1",
    "pyqt5==5.12",
    "pyqt5-sip==4.19.19",
    "pyrsistent==0.14.11",
    "pysocks==1.6.8",
    "pystan==2.19.0.0",
    "pytest==4.3.1",
    "pytest-arraydiff==0.3",
    "pytest-astropy==0.5.0",
    "pytest-doctestplus==0.3.0",
    "pytest-openfiles==0.3.2",
    "pytest-pylint==0.14.1",
    "pytest-remotedata==0.3.1",
    "python-dateutil==2.8.0",
    "pytz==2018.9",
    "pywavelets==1.0.2",
    "pyyaml==5.1",
    "pyzmq==18.0.0",
    "qtawesome==0.5.7",
    "qtpy==1.7.0",
    "queuelib==1.5.0",
    "requests==2.21.0",
    "requests-oauthlib==1.3.0",
    "retrying==1.3.3",
    "rope==0.12.0",
    "rsa==4.6",
    "ruamel-yaml==0.15.46",
    "s3fs==0.3.3",
    "s3transfer==0.2.0",
    "scikit-image==0.14.2",
    "scikit-learn==0.23.2",
    "scikit-optimize==0.5.2",
    "scikit-plot==0.3.7",
    "scikit-posthocs==0.6.5",
    "scipy==1.7.3",
    "scrapy==1.6.0",
    "seaborn==0.9.0",
    "secretstorage==3.1.1",
    "send2trash==1.5.0",
    "service-identity==18.1.0",
    "setuptools==47.3.1",
    "setuptools-git==1.2",
    "simplegeneric==0.8.1",
    "singledispatch==3.4.0.3",
    "six==1.12.0",
    "smart-open==1.8.4",
    "snowballstemmer==1.2.1",
    "sortedcollections==1.1.2",
    "sortedcontainers==2.1.0",
    "soupsieve==1.8",
    "spacy==2.1.3",
    "sphinx==1.8.5",
    "sphinxcontrib-serializinghtml==1.1.4",
    "sphinxcontrib-websupport==1.1.0",
    "sqlalchemy==1.3.1",
    "sqlparse==0.4.1",
    "srsly==0.0.5",
    "statsmodels==0.13.2",
    "sympy==1.3",
    "tables==3.5.1",
    "tabulate==0.8.3",
    "tblib==1.3.2",
    "tensorboard==1.13.1",
    "tensorboard-plugin-wit==1.7.0",
    "tensorflow==1.13.1",
    "tensorflow-estimator==1.13.0",
    "termcolor==1.1.0",
    "terminado==0.8.1",
    "testpath==0.4.2",
    "theano==1.0.4",
    "thinc==7.0.4",
    "threadpoolctl==2.1.0",
    "tifffile==2020.10.1",
    "toml==0.10.2",
    "toolz==0.9.0",
    "torch>=1.13.1",
    "torchfile==0.1.0",
    "torchvision==0.2.2.post3",
    "tornado==6.0.3",
    "tqdm==4.35.0",
    "traitlets==4.3.2",
    "twisted==19.2.0",
    "typed-ast==1.4.0",
    "typing==3.6.6",
    "typing-extensions==4.5.0",
    "unicodecsv==0.14.1",
    "urllib3==1.24.1",
    "vecstack==0.4.0",
    "visdom==0.1.8.8",
    "w3lib==1.20.0",
    "wasabi==0.2.1",
    "wcwidth==0.1.7",
    "webencodings==0.5.1",
    "websocket-client==0.56.0",
    "werkzeug==0.14.1",
    "wheel==0.33.1",
    "wrapt==1.11.2",
    "wurlitzer==1.0.3",
    "xarray==0.15.1",
    "xgboost>=1.6.2",
    "xlrd==1.2.0",
    "xlsxwriter==1.2.0",
    "xlwt==1.3.0",
    "zict==1.0.0",
    "zipp==0.6.0",
    "zope-interface==4.6.0",
]
